--- a/hegel/.drone.yml
+++ b/hegel/.drone.yml
@@ -34,20 +34,20 @@ pipeline:
     group: publish
     image: plugins/docker
     registry: quay.io
-    repo: quay.io/packet/hegel
+    repo: quay.io/tinkerbell/hegel
     tags:
       - ${DRONE_BRANCH/\//-}
       - ${DRONE_BUILD_NUMBER}-${DRONE_COMMIT_SHA}
     when:
       event: [push]
-    secrets: [docker_username, docker_password]
+    secrets: [registry_username, registry_password]
 
   publish_tag:
     group: publish
     image: plugins/docker
     registry: quay.io
-    repo: quay.io/packet/hegel
+    repo: quay.io/tinkerbell/hegel
     tags: ${DRONE_TAG}
     when:
       event: [tag]
-    secrets: [docker_username, docker_password]
+    secrets: [registry_username, registry_password]
