--- a/hegel/.drone.yml
+++ b/hegel/.drone.yml
@@ -1,4 +1,36 @@
 ---
+publish_pr_tmpl: &publish_pr_tmpl
+  group: publish
+  image: plugins/docker
+  registry: quay.io
+  tags:
+    - ${DRONE_PULL_REQUEST}
+    - ${DRONE_PULL_REQUEST}-${DRONE_BUILD_NUMBER}-${DRONE_COMMIT_SHA}
+  when:
+    event: pull_request
+  secrets:
+    - source: public_docker_password
+      target: docker_password
+    - source: public_docker_username
+      target: docker_username
+
+publish_master_tmpl: &publish_master_tmpl
+  <<: *publish_pr_tmpl
+  tags:
+    - latest
+    - ${DRONE_BUILD_NUMBER}-${DRONE_COMMIT_SHA}
+  when:
+    branch: master
+    event: push
+  secrets:
+    - docker_password
+    - docker_username
+
+publish_tag_tmpl: &publish_tag_tmpl
+  <<: *publish_master_tmpl
+  tags: ${DRONE_TAG}
+  when:
+    event: tag
 
 workspace:
   base: /go
@@ -30,28 +62,20 @@ pipeline:
     commands:
       - CGO_ENABLED=0 go build
 
-  publish:
-    group: publish
-    image: plugins/docker
-    registry: quay.io
+  publish_pr_hegel:
+    <<: *publish_pr_tmpl
+    context: .
+    dockerfile: Dockerfile
     repo: quay.io/tinkerbell/hegel-pr
-    tags:
-      - ${DRONE_BRANCH/\//-}
-      - ${DRONE_BUILD_NUMBER}-${DRONE_COMMIT_SHA}
-    when:
-      event: [push]
-    secrets:
-      - source: public_docker_username
-        target: docker_username
-      - source: public_docker_password
-        target: docker_password
 
-  publish_tag:
-    group: publish
-    image: plugins/docker
-    registry: quay.io
+  publish_master_hegel:
+    <<: *publish_master_tmpl
+    context: .
+    dockerfile: Dockerfile
     repo: quay.io/tinkerbell/hegel
-    tags: ${DRONE_TAG}
-    when:
-      event: [tag]
-    secrets: [docker_username, docker_password]
+
+  publish_tag_hegel:
+    <<: *publish_tag_tmpl
+    context: .
+    dockerfile: Dockerfile
+    repo: quay.io/tinkerbell/hegel
