--- a/hegel/.github/workflows/ci.yaml
+++ b/hegel/.github/workflows/ci.yaml
@@ -30,13 +30,6 @@ jobs:
       run: go test -coverprofile=coverage.txt ./...
     - name: upload codecov
       run: bash <(curl -s https://codecov.io/bash)
-    - name: Build binaries
-      run: go build
-    - name: Upload hegel binary
-      uses: actions/upload-artifact@v2
-      with:
-        name: hegel
-        path: ./hegel
   docker-images:
     runs-on: ubuntu-latest
     needs: [validation]
@@ -47,21 +40,17 @@ jobs:
         echo ::set-output name=tags::quay.io/tinkerbell/hegel:latest,quay.io/tinkerbell/hegel:sha-${GITHUB_SHA::8}
     - name: Checkout code
       uses: actions/checkout@v2
-    - name: Download hegel binary
-      uses: actions/download-artifact@v2
-      with:
-        name: hegel
-        path: ./hegel
-    - name: set hegel permission
-      run: chmod +x  ./hegel
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
     - name: Login to quay.io
       uses: docker/login-action@v1
+      if: ${{ startsWith(github.ref, 'refs/heads/master') }}
       with:
         registry: quay.io
         username: ${{ secrets.QUAY_USERNAME }}
         password: ${{ secrets.QUAY_PASSWORD }}
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
     - name: quay.io/tinkerbell/hegel
       uses: docker/build-push-action@v2
       with:
@@ -70,3 +59,4 @@ jobs:
         cache-from: type=registry,ref=quay.io/tinkerbell/hegel:latest
         push: ${{ startsWith(github.ref, 'refs/heads/master') }}
         tags: ${{ steps.docker-image-tag.outputs.tags }}
+        platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
