switch to not using root user
Since it is not recommended to run docker services as root
we're switching to a newly created user `tinkerbell`.

Signed-off-by: Mike Mason <mason@packet.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: 918fea683ee86c1f0d4434eca8cdc78d9343ee43

--- a/hegel/Dockerfile
+++ b/hegel/Dockerfile
@@ -10,4 +10,7 @@ EXPOSE 50061
 ENTRYPOINT ["/usr/bin/hegel"]
 
 RUN apk add --update --upgrade ca-certificates
+RUN adduser -D -u 1000 tinkerbell
+USER tinkerbell
+
 COPY --from=0 /usr/myapp/bin/hegel /usr/bin/hegel
