Rebase ENG-8444 splitting main package
PR-34 from kelly deng

Signed-off-by: Raj Dharwadkar <rdharwadkar@equinix.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: b6610981043e6b50aea388d86d143fc4c787c424

--- a/hegel/.github/workflows/ci.yaml
+++ b/hegel/.github/workflows/ci.yaml
@@ -55,7 +55,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: ./
-        file: ./Dockerfile
+        file: ./cmd/hegel/Dockerfile
         cache-from: type=registry,ref=quay.io/tinkerbell/hegel:latest
         push: ${{ startsWith(github.ref, 'refs/heads/master') }}
         tags: ${{ steps.docker-image-tag.outputs.tags }}
