--- a/hegel/.github/workflows/ci.yaml
+++ b/hegel/.github/workflows/ci.yaml
@@ -42,7 +42,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Login to quay.io
       uses: docker/login-action@v1
-      if: ${{ startsWith(github.ref, 'refs/heads/master') }}
+      if: ${{ startsWith(github.ref, 'refs/heads/main') }}
       with:
         registry: quay.io
         username: ${{ secrets.QUAY_USERNAME }}
@@ -57,6 +57,6 @@ jobs:
         context: ./
         file: ./cmd/hegel/Dockerfile
         cache-from: type=registry,ref=quay.io/tinkerbell/hegel:latest
-        push: ${{ startsWith(github.ref, 'refs/heads/master') }}
+        push: ${{ startsWith(github.ref, 'refs/heads/main') }}
         tags: ${{ steps.docker-image-tag.outputs.tags }}
         platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
