--- a/hegel/.github/workflows/ci.yaml
+++ b/hegel/.github/workflows/ci.yaml
@@ -14,16 +14,13 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: "1.14.6"
+          go-version: "1.17.1"
       - name: goimports
         run: go get golang.org/x/tools/cmd/goimports && goimports -d . | (! grep .)
       - name: go vet
         run: go vet ./...
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
-        with:
-          version: v1.31
-          args: --skip-dirs cmd/packetflow
+      - name: lint
+        run: make lint
       - name: go test
         run: go test -v ./...
       - name: go test coverage
