--- a/ipxedust/.gitignore
+++ b/ipxedust/.gitignore
@@ -13,3 +13,10 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# Local Go build artifacts
+bin/
+
+# iPXE build directories
+upstream-*
+ipxe-*.tar.gz
