--- a/ipxedust/.github/workflows/ci.yaml
+++ b/ipxedust/.github/workflows/ci.yaml
@@ -25,3 +25,5 @@ jobs:
         run: make cover
       - name: Codecov
         uses: codecov/codecov-action@v2.1.0
+      - name: Build
+        run: make build
