Pass jobserver down to ipxe's make invocations
This `+` instructs make to pass down jobserver info into the environment so that
sub-makes can participate in proper job management. Without this make does not
build targets in parallel and prints the following message:

    make[1]: warning: jobserver unavailable: using -j1.  Add '+' to parent make rule.

On my dev machine I get the following build times:

-j1:  4m17.373552755s # current main
-j2:  2m10.122714826s # potentially if we ran -j$(nproc) while using github hosted runners (more if we use self-hosted builder)
-j32:   20.370867022s # my dev machine
-j:     21.003698288s # my dev machine but just for fun

See more info in GNUMake's documentation section `5.7.3 Communicating Options to a Sub-make`
https://www.gnu.org/software/make/manual/html_node/Options_002fRecursion.html#Options_002fRecursion

Signed-off-by: Manuel Mendez <mmendez@equinix.com>
Signed-off-by: Manuel Mendez <github@i.m.mmlb.dev>

Legacy-Repo: ipxedust
Tinkerbell-Legacy-Original-SHA1: 9badb805b85982ca88ac3b56e7d1bc7c3e26bb5d

--- a/ipxedust/Makefile
+++ b/ipxedust/Makefile
@@ -27,13 +27,13 @@ $(ipxe_readme): binary/script/ipxe.commit
 	touch "$@"
 
 binary/ipxe.efi: $(ipxe_readme) ## build ipxe.efi
-	${IPXE_BUILD_SCRIPT} bin-x86_64-efi/ipxe.efi "$(ipxe_sha_or_tag)" $(ipxe_build_in_docker) $@ "${IPXE_NIX_SHELL}"
+	+${IPXE_BUILD_SCRIPT} bin-x86_64-efi/ipxe.efi "$(ipxe_sha_or_tag)" $(ipxe_build_in_docker) $@ "${IPXE_NIX_SHELL}"
 
 binary/undionly.kpxe: $(ipxe_readme) ## build undionly.kpxe
-	${IPXE_BUILD_SCRIPT} bin/undionly.kpxe "$(ipxe_sha_or_tag)" $(ipxe_build_in_docker) $@ "${IPXE_NIX_SHELL}"
+	+${IPXE_BUILD_SCRIPT} bin/undionly.kpxe "$(ipxe_sha_or_tag)" $(ipxe_build_in_docker) $@ "${IPXE_NIX_SHELL}"
 
 binary/snp.efi: $(ipxe_readme) ## build snp.efi
-	${IPXE_BUILD_SCRIPT} bin-arm64-efi/snp.efi "$(ipxe_sha_or_tag)" $(ipxe_build_in_docker) $@  "${IPXE_NIX_SHELL}" "CROSS_COMPILE=aarch64-unknown-linux-gnu-"
+	+${IPXE_BUILD_SCRIPT} bin-arm64-efi/snp.efi "$(ipxe_sha_or_tag)" $(ipxe_build_in_docker) $@  "${IPXE_NIX_SHELL}" "CROSS_COMPILE=aarch64-unknown-linux-gnu-"
 
 .PHONY: binary/clean
 binary/clean: ## clean ipxe binaries, upstream ipxe source code directory, and ipxe source tarball
