Add Kubernetes back-end client.
The Kubernetes back-end client enables Hegel to talk to a Kubernetes API
Server to retrieve Hardware metadata from CRDs available in the Tink
project.

This realizes the Hegel portion of proposal 0026.

Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: c30326a307e28fc30245f05c085ba351be32af43

--- a/hegel/Makefile
+++ b/hegel/Makefile
@@ -1,6 +1,7 @@
 binary := cmd/hegel
 
-all: build
+# The image recipe calls build hence build doesn't feature here.
+all: unit-test image
 
 .PHONY: ${binary} build
 ${binary}: 
@@ -17,12 +18,16 @@ image:
 
 .PHONY: gen
 gen: grpc/protos/hegel/hegel.pb.go
+
 grpc/protos/hegel/hegel.pb.go: grpc/protos/hegel/hegel.proto
 	protoc --go_out=plugins=grpc:./ grpc/protos/hegel/hegel.proto
 	goimports -w $@
+
 ifeq ($(CI),drone)
 run: ${binary}
 	${binary}
+
+.PHONY test
 test:
 	go test -race -coverprofile=coverage.txt -covermode=atomic ${TEST_ARGS} ./...
 endif
