Prepare CLI logic for centralized configuration.
At present flag and environment configuration is sprawled across the
Hegel codebase. This commit provides a cobra Command and corresponding
Viper construct to centralize configuration.

A subsequent change will refactor the codebase to leverage the inputs
gathered from this command.

Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: 0ba601be0f5c46a1f5e18897b3dcc09a0ccec4d1

--- a/hegel/Makefile
+++ b/hegel/Makefile
@@ -1,9 +1,17 @@
 binary := cmd/hegel
-all: ${binary}
-.PHONY: ${binary} gen test
-${binary}: grpc/protos/hegel
-${binary}:
-	CGO_ENABLED=0 GOOS=$$GOOS go build -ldflags="-X main.GitRev=$(shell git rev-parse --short HEAD)" -o $@ ./$@
+
+all: build
+
+.PHONY: ${binary}
+${binary}: 
+build:
+	CGO_ENABLED=0 GOOS=$$GOOS go build -ldflags="-X main.GitRev=$(shell git rev-parse --short HEAD)" -o hegel ./cmd/hegel
+
+.PHONY: image
+image:
+	docker build $(IMAGE_ARGS) -f ./cmd/hegel/Dockerfile .
+
+.PHONY: gen
 gen: grpc/protos/hegel/hegel.pb.go
 grpc/protos/hegel/hegel.pb.go: grpc/protos/hegel/hegel.proto
 	protoc --go_out=plugins=grpc:./ grpc/protos/hegel/hegel.proto
