Request for Approvers Role
Hello. I would like to request the Approver role in the Hegel repo.

GitHub Username
@jacobweinstock

Role
Approver

Requirements:
- approver from 2020-10-01 until 2022-04-01 
- reviewer from 2022-04-29 until present

Reviews:
- https://github.com/tinkerbell/hegel/pull/87
- https://github.com/tinkerbell/hegel/pull/66
- https://github.com/tinkerbell/hegel/pull/65
- https://github.com/tinkerbell/hegel/pull/60

Maintainers
@chrisdoherty4, @nshalman, @mmlb
Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: 3be7198997fd6b6f9e2d191f9a961425d1814ce1

--- a/hegel/.github/settings.yml
+++ b/hegel/.github/settings.yml
@@ -11,11 +11,11 @@ collaborators:
   # Approvers
   - username: displague
     permission: push
+  - username: jacobweinstock
+    permission: push
   - username: tstromberg
     permission: push
   # Reviewers
-  - username: jacobweinstock
-    permission: triage
   - username: splaspood
     permission: triage
 
