Make kubernetes API URL optional
* Add default container image tag

Signed-off-by: Micah Hausler <mhausler@amazon.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: 9862949cc48cc10d13856d4944948acf84ef24a6

--- a/hegel/Makefile
+++ b/hegel/Makefile
@@ -4,13 +4,15 @@ binary := cmd/hegel
 all: unit-test image
 
 .PHONY: ${binary} build
-${binary}: 
+${binary}:
 build:
 	CGO_ENABLED=0 GOOS=$$GOOS go build -ldflags="-X build.gitRevision=$(shell git rev-parse --short HEAD)" -o hegel ./cmd/hegel
 
 .PHONY: unit-test
 unit-test:
 	go test $(GO_TEST_ARGS) -coverprofile=unit-test.coverage ./...
+
+IMAGE_ARGS ?= -t hegel
 
 .PHONY: image
 image:
