Build ipxe binaries in parallel
Building the different binaries is emberassingly parallel so lets make the
builds go faster.

Signed-off-by: Manuel Mendez <github@i.m.mmlb.dev>

Legacy-Repo: ipxedust
Tinkerbell-Legacy-Original-SHA1: aa66c4c0ece0831f3c5e9634e748aad209dfed41

--- a/ipxedust/.github/workflows/ipxe.yaml
+++ b/ipxedust/.github/workflows/ipxe.yaml
@@ -17,4 +17,4 @@ jobs:
       - name: Build iPXE
         env:
           GITHUB_TOKEN: ${{ secrets.Token }}
-        run: (cd binary/; ./script/build_and_pr.sh)
+        run: (cd binary/; MAKEFLAGS=-j$(nproc) ./script/build_and_pr.sh)
