Updates for Helm CRD use and ordering:
This uses the Helm native crds/ directory so they get
installed first. Also, tries to add some ordering so that
the stack service type LoadBalancer waits to be installed
until after the LoadBalancer (KubeVIP) is installed. Helm
must be called with `--wait` for this to function correctly
and for the stack service to get the load balancer IP assigned.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 1061f7d49449714b58c68c5280a6f91b3dfd0241

--- a/charts/tinkerbell/stack/templates/service.yaml
+++ b/charts/tinkerbell/stack/templates/service.yaml
@@ -2,6 +2,9 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    "helm.sh/hook": "post-install,post-upgrade"
+    "helm.sh/hook-weight": "5"
   labels:
     app: {{ .Values.service.name }}
   name: {{ .Values.service.name }}
