Update values.yml naming across charts, use helm for creating namespace:
Helm has a bit cleaner way of handling namespace creation. Also,
by using the Helm cli flag for namespacing i was able to remove
all namespace creation and setting yaml and values.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 7ab992e87f2f4168313988e17dc963ba01a191a5

--- a/charts/tinkerbell/boots/values.yaml
+++ b/charts/tinkerbell/boots/values.yaml
@@ -1,6 +1,4 @@
-namespace: tink-system
-createNamespace: false
-boots:
+boots: # a top-level key like this enables importing of all sub-keys in parent charts
   deploy: true
   hostNetwork: true
   name: boots
