--- a/charts/tinkerbell/hegel/templates/rolebinding.yaml
+++ b/charts/tinkerbell/hegel/templates/rolebinding.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: {{ .Values.hegel.roleBindingName }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -11,5 +11,5 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ .Values.hegel.name }}
-    namespace: {{ .Values.namespace }}
+    namespace: {{ .Release.Namespace | quote }}
 {{- end }}
