--- a/charts/tinkerbell/rufio/values.yaml
+++ b/charts/tinkerbell/rufio/values.yaml
@@ -1,6 +1,4 @@
-namespace: tink-system
-createNamespace: false
-rufio:
+rufio: # a top-level key like this enables importing of all sub-keys in parent charts
   deploy: true
   name: rufio-controller-manager
   image: quay.io/tinkerbell/rufio:v0.1.0
