--- a/charts/tinkerbell/tink/templates/tink-controller/deployment.yaml
+++ b/charts/tinkerbell/tink/templates/tink-controller/deployment.yaml
@@ -1,37 +1,37 @@
-{{- if .Values.tinkController.deploy }}
+{{- if .Values.tink.controller.deploy }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: {{ .Values.tinkController.name }}
-  name: {{ .Values.tinkController.name }}
-  namespace: {{ .Values.namespace }}
+    app: {{ .Values.tink.controller.name }}
+  name: {{ .Values.tink.controller.name }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
-  replicas: {{ .Values.tinkController.replicas }}
+  replicas: {{ .Values.tink.controller.replicas }}
   selector:
     matchLabels:
-      app: {{ .Values.tinkController.name }}
+      app: {{ .Values.tink.controller.name }}
   template:
     metadata:
       labels:
-        app: {{ .Values.tinkController.name }}
+        app: {{ .Values.tink.controller.name }}
     spec:
       containers:
-        - image: {{ .Values.tinkController.image }}
-          imagePullPolicy: {{ .Values.tinkController.imagePullPolicy }}
-          {{- if .Values.tinkController.args }}
+        - image: {{ .Values.tink.controller.image }}
+          imagePullPolicy: {{ .Values.tink.controller.imagePullPolicy }}
+          {{- if .Values.tink.controller.args }}
           args: 
-          {{- range .Values.tinkController.args }}
+          {{- range .Values.tink.controller.args }}
             - {{ . }}
           {{- end }}
           {{- end }}
-          name: {{ .Values.tinkController.name }}
+          name: {{ .Values.tink.controller.name }}
           resources:
             limits:
-              cpu: {{ .Values.tinkController.resources.limits.cpu }}
-              memory: {{ .Values.tinkController.resources.limits.memory }}
+              cpu: {{ .Values.tink.controller.resources.limits.cpu }}
+              memory: {{ .Values.tink.controller.resources.limits.memory }}
             requests:
-              cpu: {{ .Values.tinkController.resources.requests.cpu }}
-              memory: {{ .Values.tinkController.resources.requests.memory }}
-      serviceAccountName: {{ .Values.tinkController.name }}
+              cpu: {{ .Values.tink.controller.resources.requests.cpu }}
+              memory: {{ .Values.tink.controller.resources.requests.memory }}
+      serviceAccountName: {{ .Values.tink.controller.name }}
 {{- end }}
