--- a/charts/tinkerbell/tink/templates/tink-server/service-account.yaml
+++ b/charts/tinkerbell/tink/templates/tink-server/service-account.yaml
@@ -1,7 +1,7 @@
-{{- if .Values.tinkServer.deploy }}
+{{- if .Values.tink.server.deploy }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.tinkServer.name }}
-  namespace: {{ .Values.namespace }}
+  name: {{ .Values.tink.server.name }}
+  namespace: {{ .Release.Namespace | quote }}
 {{- end }}
