--- a/charts/tinkerbell/boots/templates/service.yaml
+++ b/charts/tinkerbell/boots/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: {{ .Values.boots.name }}
   name: {{ .Values.boots.name }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   clusterIP: None
   ports:
