--- a/charts/tinkerbell/hegel/templates/deployment.yaml
+++ b/charts/tinkerbell/hegel/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: {{ .Values.hegel.name }}
   name:  {{ .Values.hegel.name }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   replicas: {{ .Values.hegel.replicas }}
   selector:
