--- a/charts/tinkerbell/rufio/crds/bmc.tinkerbell.org_machines.yaml
+++ b/charts/tinkerbell/rufio/crds/bmc.tinkerbell.org_machines.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.rufio.deploy }}
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -6,24 +5,22 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
-  name: tasks.bmc.tinkerbell.org
+  name: machines.bmc.tinkerbell.org
 spec:
   group: bmc.tinkerbell.org
   names:
     categories:
     - tinkerbell
-    kind: Task
-    listKind: TaskList
-    plural: tasks
-    shortNames:
-    - t
-    singular: task
+    kind: Machine
+    listKind: MachineList
+    plural: machines
+    singular: machine
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: Task is the Schema for the Task API.
+        description: Machine is the Schema for the machines API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -38,10 +35,11 @@ spec:
           metadata:
             type: object
           spec:
-            description: TaskSpec defines the desired state of Task.
+            description: MachineSpec defines desired machine state
             properties:
               connection:
-                description: Connection represents the Machine connectivity information.
+                description: Connection contains connection data for a Baseboard Management
+                  Controller.
                 properties:
                   authSecretRef:
                     description: AuthSecretRef is the SecretReference that contains
@@ -74,75 +72,43 @@ spec:
                 - insecureTLS
                 - port
                 type: object
-              task:
-                description: Task defines the specific action to be performed.
-                maxProperties: 1
-                properties:
-                  oneTimeBootDeviceAction:
-                    description: OneTimeBootDeviceAction represents a baseboard management
-                      one time set boot device operation.
-                    properties:
-                      device:
-                        description: Devices represents the boot devices, in order
-                          for setting one time boot. Currently only the first device
-                          in the slice is used to set one time boot.
-                        items:
-                          description: BootDevice represents boot device of the Machine.
-                          type: string
-                        type: array
-                      efiBoot:
-                        description: EFIBoot instructs the machine to use EFI boot.
-                        type: boolean
-                    required:
-                    - device
-                    type: object
-                  powerAction:
-                    description: PowerAction represents a baseboard management power
-                      operation.
-                    enum:
-                    - "on"
-                    - "off"
-                    - soft
-                    - status
-                    - cycle
-                    - reset
-                    type: string
-                type: object
             required:
-            - task
+            - connection
             type: object
           status:
-            description: TaskStatus defines the observed state of Task
+            description: MachineStatus defines the observed state of Machine
             properties:
-              completionTime:
-                description: CompletionTime represents time when the task was completed.
-                  The completion time is only set when the task finishes successfully.
-                format: date-time
-                type: string
               conditions:
                 description: Conditions represents the latest available observations
                   of an object's current state.
                 items:
+                  description: MachineCondition defines an observed condition of a
+                    Machine.
                   properties:
+                    lastUpdateTime:
+                      description: LastUpdateTime of the condition.
+                      format: date-time
+                      type: string
                     message:
-                      description: Message represents human readable message indicating
-                        details about last transition.
+                      description: Message is a human readable message indicating
+                        with details of the last transition.
                       type: string
                     status:
-                      description: Status is the status of the Task condition. Can
-                        be True or False.
+                      description: Status of the condition.
                       type: string
                     type:
-                      description: Type of the Task condition.
+                      description: Type of the Machine condition.
                       type: string
                   required:
                   - status
                   - type
                   type: object
                 type: array
-              startTime:
-                description: StartTime represents time when the Task started processing.
-                format: date-time
+              powerState:
+                description: Power is the current power state of the Machine.
+                enum:
+                - "on"
+                - "off"
                 type: string
             type: object
         type: object
@@ -156,4 +122,3 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-{{- end }}
