--- a/charts/tinkerbell/rufio/templates/cluster-role-binding.yaml
+++ b/charts/tinkerbell/rufio/templates/cluster-role-binding.yaml
@@ -10,5 +10,5 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ .Values.rufio.serviceAccountName }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 {{- end }}
