--- a/charts/tinkerbell/rufio/templates/deployment.yaml
+++ b/charts/tinkerbell/rufio/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     control-plane: controller-manager
   name: {{ .Values.rufio.name }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   selector:
     matchLabels:
