--- a/charts/tinkerbell/rufio/templates/leader-election-role.yaml
+++ b/charts/tinkerbell/rufio/templates/leader-election-role.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: {{ .Values.rufio.rufioLeaderElectionRoleName }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 rules:
 - apiGroups:
   - ""
