--- a/charts/tinkerbell/rufio/templates/secrets-viewer-role-binding.yaml
+++ b/charts/tinkerbell/rufio/templates/secrets-viewer-role-binding.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: {{ .Values.rufio.rufioSecretsViewerRoleBindingName }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -11,5 +11,5 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ .Values.rufio.serviceAccountName }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 {{- end }}
