--- a/charts/tinkerbell/rufio/templates/service-account.yaml
+++ b/charts/tinkerbell/rufio/templates/service-account.yaml
@@ -3,5 +3,5 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.rufio.serviceAccountName }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 {{- end }}
