--- a/charts/tinkerbell/stack/Chart.yaml
+++ b/charts/tinkerbell/stack/Chart.yaml
@@ -25,23 +25,27 @@ appVersion: "0.1.0"
 
 dependencies:
 - name: tink
+  #alias: tinkChart
   version: "0.1.0"
   repository: "file://../tink"
   import-values:
-  - child: tinkServer
-    parent: tinkData
+  - child: tink
+    parent: tink
 - name: boots
+  #alias: bootsChart
   version: "0.1.0"
   repository: "file://../boots"
   import-values:
   - child: boots
-    parent: bootsData
+    parent: boots
 - name: rufio
+  #alias: rufioChart
   version: "0.1.0"
   repository: "file://../rufio"
 - name: hegel
+  #alias: hegelChart
   version: "0.1.0"
   repository: "file://../hegel"
   import-values:
   - child: hegel
-    parent: hegelData
+    parent: hegel
