--- a/charts/tinkerbell/stack/templates/loadbalancer.yaml
+++ b/charts/tinkerbell/stack/templates/loadbalancer.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: {{ .Values.kubevip.name }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     app.kubernetes.io/name: {{ .Values.kubevip.name }}
 spec:
@@ -44,7 +44,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.kubevip.name }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -86,6 +86,6 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ .Values.kubevip.name }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 ---
 {{- end }}
