--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nginx-conf
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 data:
   nginx.conf: |
     worker_processes 1;
@@ -18,31 +18,31 @@ data:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           resolver 10.43.0.10;
-          set $boots_dns {{ .Values.bootsData.name }}.{{ .Values.namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
 
           proxy_pass http://$boots_dns;
         }
       }
 
       server {
-        listen {{ .Values.hegelData.deployment.port }};
+        listen {{ .Values.hegel.deployment.port }};
         location / {
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           resolver 10.43.0.10;
-          set $hegel_dns {{ .Values.hegelData.name }}.{{ .Values.namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          set $hegel_dns {{ .Values.hegel.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
 
           proxy_pass http://$hegel_dns:50061;
         }
       }
 
       server {
-        listen {{ .Values.tinkData.deployment.port }} http2;
+        listen {{ .Values.tink.server.deployment.port }} http2;
         location / {
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           resolver 10.43.0.10;
-          set $tink_dns {{ .Values.tinkData.name }}.{{ .Values.namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          set $tink_dns {{ .Values.tink.server.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
 
           grpc_pass grpc://$tink_dns:42113;
         }
@@ -55,7 +55,7 @@ data:
       server {
           listen 67 udp;
           resolver 10.43.0.10; # needed in Kubernetes for dynamic DNS resolution
-          set $boots_dns {{ .Values.bootsData.name }}.{{ .Values.namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
           proxy_pass $boots_dns:67;
           proxy_bind $remote_addr:$remote_port transparent;
           proxy_responses 0;
@@ -64,7 +64,7 @@ data:
       server {
           listen 69 udp;
           resolver 10.43.0.10;
-          set $boots_dns {{ .Values.bootsData.name }}.{{ .Values.namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
           proxy_pass $boots_dns:69;
           proxy_timeout 1s;
           access_log /dev/stdout logger-json;
@@ -72,7 +72,7 @@ data:
       server {
           listen 514 udp;
           resolver 10.43.0.10;
-          set $boots_dns {{ .Values.bootsData.name }}.{{ .Values.namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
           proxy_pass $boots_dns:514;
           proxy_bind $remote_addr:$remote_port transparent;
           proxy_responses 0;
@@ -84,7 +84,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.service.name}}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   selector:
     matchLabels:
@@ -103,17 +103,17 @@ spec:
       - name: {{ .Values.service.name}}
         image: {{ .Values.service.image }}
         ports:
-        {{- range .Values.bootsData.ports }}
+        {{- range .Values.boots.ports }}
         - containerPort: {{ .port}}
           name: {{ .name }}
           protocol: {{ .protocol }}
         {{- end }}
-        - containerPort: {{ .Values.hegelData.deployment.port }}
+        - containerPort: {{ .Values.hegel.deployment.port }}
           protocol: TCP
-          name: {{ .Values.hegelData.deployment.portName }}
-        - containerPort: {{ .Values.tinkData.deployment.port }}
+          name: {{ .Values.hegel.deployment.portName }}
+        - containerPort: {{ .Values.tink.server.deployment.port }}
           protocol: TCP
-          name: {{ .Values.tinkData.deployment.portName }}
+          name: {{ .Values.tink.server.deployment.portName }}
         resources:
           limits:
             cpu: 500m
@@ -125,6 +125,10 @@ spec:
         - mountPath: /etc/nginx
           readOnly: true
           name: nginx-conf
+      initContainers:
+      - name: init-hook-download
+        image: busybox:1.28
+        command: ['sh', '-c', "id"]
       volumes:
       - name: nginx-conf
         configMap:
