--- a/charts/tinkerbell/stack/values.yaml
+++ b/charts/tinkerbell/stack/values.yaml
@@ -1,6 +1,3 @@
-namespace: tink-system
-createNamespace: true
-
 # service for the stack
 service:
   enabled: true
@@ -22,11 +19,15 @@ kubevip:
   interface: enp0s9
 
 tink:
-  namespace: tink-system
+  tink:
+    controller:
+      image: quay.io/tinkerbell/tink-controller:latest
+    server:
+      image: quay.io/tinkerbell/tink:latest
 
 boots:
-  namespace: tink-system
   boots:
+    image: quay.io/tinkerbell/boots:latest
     env:
     - name: DATA_MODEL_VERSION
       value: "kubernetes"
@@ -56,12 +57,12 @@ boots:
 
 
 hegel:
-  namespace: tink-system
   hegel:
+    image: quay.io/tinkerbell/hegel:latest
     env:
     - name: TRUSTED_PROXIES
       value: 10.42.0.0/24
 
 rufio:
-  namespace: tink-system
-
+  rufio:
+    image: quay.io/tinkerbell/rufio:v0.1.0
